stock/mud/src/y.output
   0  $accept : all $end

   1  all : program

   2  program : program def possible_semi_colon
   3          |

   4  possible_semi_colon :
   5                      | ';'

   6  inheritance : inheritance_qualifiers F_INHERIT string_constant ';'

   7  optional_star :
   8                | '*'

   9  $$1 :

  10  function_body : $$1 block
  11                | ';'

  12  $$2 :

  13  $$3 :

  14  def : type optional_star F_IDENTIFIER $$2 '(' argument ')' $$3 function_body
  15      | type name_list ';'
  16      | inheritance

  17  new_arg_name : type optional_star F_IDENTIFIER
  18               | type optional_star F_LOCAL

  19  argument :
  20           | argument_list

  21  argument_list : new_arg_name
  22                | argument_list ',' new_arg_name

  23  type_modifier : F_NO_MASK
  24                | F_STATIC
  25                | F_PRIVATE
  26                | F_PUBLIC
  27                | F_VARARGS
  28                | F_PROTECTED

  29  inheritance_modifier : F_VIRTUAL

  30  type_modifier_list :
  31                     | type_modifier_list type_modifier

  32  inheritance_modifier_list : type_modifier_list
  33                            | inheritance_modifier_list inheritance_modifier type_modifier_list

  34  inheritance_qualifier : type optional_star F_IDENTIFIER

  35  inheritance_qualifiers : inheritance_modifier_list
  36                         | inheritance_qualifier inheritance_qualifiers

  37  type : type_modifier_list opt_basic_type

  38  cast : '(' basic_type optional_star ')'

  39  decl_cast : '(' '{' basic_type optional_star '}' ')'

  40  opt_basic_type : basic_type
  41                 |

  42  basic_type : F_STATUS
  43             | F_INT
  44             | F_STRING_DECL
  45             | F_OBJECT
  46             | F_CLOSURE_DECL
  47             | F_SYMBOL_DECL
  48             | F_FLOAT_DECL
  49             | F_MAPPING
  50             | F_VOID
  51             | F_MIXED

  52  name_list : new_name
  53            | name_list ',' new_name

  54  new_name : optional_star F_IDENTIFIER

  55  $$4 :

  56  new_name : optional_star F_IDENTIFIER $$4 F_ASSIGN expr0

  57  block : '{' local_declarations statements '}'

  58  local_declarations :
  59                     | local_declarations basic_type local_name_list ';'

  60  new_local_name : optional_star F_IDENTIFIER

  61  local_name_list : new_local_name
  62                  | local_name_list ',' new_local_name

  63  statements :
  64             | statements statement

  65  statement : comma_expr ';'
  66            | error ';'
  67            | cond
  68            | while
  69            | do
  70            | for
  71            | switch
  72            | case
  73            | default
  74            | return ';'
  75            | block
  76            | ';'
  77            | F_BREAK ';'
  78            | F_CONTINUE ';'

  79  $$5 :

  80  $$6 :

  81  while : $$5 F_WHILE '(' comma_expr ')' $$6 statement

  82  $$7 :

  83  $$8 :

  84  do : $$7 F_DO statement F_WHILE $$8 '(' comma_expr ')' ';'

  85  $$9 :

  86  $$10 :

  87  $$11 :

  88  $$12 :

  89  for : F_FOR '(' $$9 for_expr ';' $$10 for_expr ';' $$11 for_expr ')' $$12 statement

  90  for_expr :
  91           | comma_expr

  92  $$13 :

  93  switch : F_SWITCH '(' comma_expr ')' $$13 statement

  94  case : F_CASE case_label ':'
  95       | F_CASE case_label F_RANGE case_label ':'

  96  case_label : constant
  97             | string_constant

  98  constant : constant '|' constant
  99           | constant '^' constant
 100           | constant '&' constant
 101           | constant F_EQ constant
 102           | constant F_NE constant
 103           | constant '>' constant
 104           | constant F_GE constant
 105           | constant '<' constant
 106           | constant F_LE constant
 107           | constant F_LSH constant
 108           | constant F_RSH constant
 109           | constant '+' constant
 110           | constant '-' constant
 111           | constant '*' constant
 112           | constant '%' constant
 113           | constant '/' constant
 114           | '(' constant ')'
 115           | '-' constant
 116           | F_NOT constant
 117           | '~' constant
 118           | F_NUMBER

 119  default : F_DEFAULT ':'

 120  comma_expr : expr0

 121  $$14 :

 122  comma_expr : comma_expr $$14 ',' expr0

 123  expr0 : lvalue F_ASSIGN expr0
 124        | error F_ASSIGN expr0

 125  $$15 :

 126  $$16 :

 127  expr0 : expr0 '?' $$15 expr0 $$16 ':' expr0

 128  $$17 :

 129  expr0 : expr0 F_LOR $$17 expr0

 130  $$18 :

 131  expr0 : expr0 F_LAND $$18 expr0
 132        | expr0 '|' expr0
 133        | expr0 '^' expr0
 134        | expr0 '&' expr0
 135        | expr0 F_EQ expr0
 136        | expr0 F_NE expr0
 137        | expr0 '>' expr0
 138        | expr0 F_GE expr0
 139        | expr0 '<' expr0
 140        | expr0 F_LE expr0
 141        | expr0 F_LSH expr0
 142        | expr0 F_RSH expr0

 143  $$19 :

 144  expr0 : expr0 '+' $$19 expr0
 145        | expr0 '-' expr0
 146        | expr0 '*' expr0
 147        | expr0 '%' expr0
 148        | expr0 '/' expr0
 149        | decl_cast expr0
 150        | cast expr0
 151        | pre_inc_dec F_IDENTIFIER
 152        | pre_inc_dec F_LOCAL
 153        | pre_inc_dec expr4 '[' expr0 ']'
 154        | pre_inc_dec expr4 '[' '<' expr0 ']'
 155        | F_NOT expr0
 156        | '~' expr0
 157        | '-' expr0
 158        | lvalue F_INC
 159        | lvalue F_DEC
 160        | expr4

 161  note_start :

 162  expr4 : function_call
 163        | F_STRING
 164        | F_NUMBER
 165        | F_CLOSURE
 166        | F_SYMBOL
 167        | F_FLOAT
 168        | '(' note_start comma_expr ')'
 169        | catch
 170        | sscanf
 171        | '(' '{' note_start expr_list '}' ')'
 172        | F_QUOTED_AGGREGATE note_start expr_list '}' ')'
 173        | '(' '[' note_start m_expr_list ']' ')'
 174        | expr4 '[' expr0 F_RANGE expr0 ']'
 175        | expr4 '[' expr0 F_RANGE '<' expr0 ']'
 176        | expr4 '[' '<' expr0 F_RANGE expr0 ']'
 177        | expr4 '[' '<' expr0 F_RANGE '<' expr0 ']'
 178        | expr4 '[' expr0 F_RANGE ']'
 179        | expr4 '[' '<' expr0 F_RANGE ']'
 180        | '&' F_IDENTIFIER
 181        | '&' F_LOCAL
 182        | '&' '(' expr4 '[' expr0 ']' ')'
 183        | '&' '(' expr4 '[' '<' expr0 ']' ')'
 184        | '&' '(' expr4 '[' expr0 ',' expr0 ']' ')'
 185        | '&' '(' expr4 '[' expr0 F_RANGE expr0 ']' ')'
 186        | '&' '(' expr4 '[' expr0 F_RANGE '<' expr0 ']' ')'
 187        | '&' '(' expr4 '[' '<' expr0 F_RANGE expr0 ']' ')'
 188        | '&' '(' expr4 '[' '<' expr0 F_RANGE '<' expr0 ']' ')'
 189        | F_IDENTIFIER
 190        | F_LOCAL
 191        | expr4 '[' expr0 ']'
 192        | expr4 '[' '<' expr0 ']'
 193        | expr4 '[' expr0 ',' expr0 ']'

 194  pre_inc_dec : F_INC
 195              | F_DEC

 196  return : F_RETURN
 197         | F_RETURN comma_expr

 198  expr_list :
 199            | expr_list2
 200            | expr_list2 ','

 201  expr_list2 : expr0
 202             | expr_list2 ',' expr0

 203  expr_list3 :
 204             | expr0
 205             | expr_list2 ',' expr0

 206  m_expr_list :
 207              | m_expr_list2
 208              | m_expr_list2 ','
 209              | expr_list2
 210              | expr_list2 ','

 211  m_expr_list2 : expr0 m_expr_values
 212               | m_expr_list2 ',' expr0 m_expr_values

 213  m_expr_values : ':' expr0
 214                | m_expr_values ';' expr0

 215  $$20 :

 216  catch : F_CATCH $$20 '(' comma_expr ')'

 217  sscanf : F_SSCANF note_start '(' expr0 ',' expr0 lvalue_list ')'

 218  lvalue_list :
 219              | lvalue_list ',' F_IDENTIFIER
 220              | lvalue_list ',' F_LOCAL
 221              | lvalue_list ',' expr4 '[' expr0 ']'
 222              | lvalue_list ',' expr4 '[' '<' expr0 ']'
 223              | lvalue_list ',' expr4 '[' expr0 ',' expr0 ']'
 224              | lvalue_list ',' expr4 '[' expr0 F_RANGE ']'
 225              | lvalue_list ',' expr4 '[' expr0 F_RANGE expr0 ']'
 226              | lvalue_list ',' expr4 '[' expr0 F_RANGE '<' expr0 ']'
 227              | lvalue_list ',' expr4 '[' '<' expr0 F_RANGE expr0 ']'
 228              | lvalue_list ',' expr4 '[' '<' expr0 F_RANGE '<' expr0 ']'

 229  lvalue : F_IDENTIFIER
 230         | F_LOCAL
 231         | expr4 '[' expr0 ']'
 232         | expr4 '[' '<' expr0 ']'
 233         | expr4 '[' expr0 ',' expr0 ']'
 234         | expr4 '[' expr0 F_RANGE ']'
 235         | expr4 '[' '<' expr0 F_RANGE ']'
 236         | expr4 '[' expr0 F_RANGE expr0 ']'
 237         | expr4 '[' expr0 F_RANGE '<' expr0 ']'
 238         | expr4 '[' '<' expr0 F_RANGE expr0 ']'
 239         | expr4 '[' '<' expr0 F_RANGE '<' expr0 ']'

 240  string_constant : F_STRING
 241                  | string_constant '+' F_STRING
 242                  | F_STRING F_STRING
 243                  | string_constant '+' F_STRING F_STRING
 244                  | '(' string_constant ')'

 245  $$21 :

 246  function_call : function_name $$21 '(' expr_list3 ')'

 247  $$22 :

 248  function_call : expr4 F_ARROW function_name $$22 '(' expr_list3 ')'

 249  anchestor : F_IDENTIFIER
 250            | F_STRING F_STRING
 251            | F_STRING

 252  function_name : F_IDENTIFIER
 253                | F_COLON_COLON F_IDENTIFIER
 254                | anchestor F_COLON_COLON F_IDENTIFIER

 255  condStart : F_IF '(' comma_expr ')'

 256  cond : condStart statement optional_else

 257  optional_else :

 258  $$23 :

 259  optional_else : F_ELSE $$23 statement

state 0
	$accept : . all $end  (0)
	program : .  (3)

	.  reduce 3

	all  goto 1
	program  goto 2


state 1
	$accept : all . $end  (0)

	$end  accept


state 2
	all : program .  (1)
	program : program . def possible_semi_colon  (2)
	type_modifier_list : .  (30)

	$end  reduce 1
	F_INT  reduce 30
	F_STATUS  reduce 30
	F_STRING_DECL  reduce 30
	F_FLOAT_DECL  reduce 30
	F_OBJECT  reduce 30
	F_CLOSURE_DECL  reduce 30
	F_SYMBOL_DECL  reduce 30
	F_VOID  reduce 30
	F_MIXED  reduce 30
	F_STATIC  reduce 30
	F_PRIVATE  reduce 30
	F_NO_MASK  reduce 30
	F_PROTECTED  reduce 30
	F_PUBLIC  reduce 30
	F_VARARGS  reduce 30
	F_VIRTUAL  reduce 30
	F_INHERIT  reduce 30
	F_IDENTIFIER  reduce 30
	F_MAPPING  reduce 30
	'*'  reduce 30

	type  goto 3
	inheritance_modifier_list  goto 4
	inheritance_qualifier  goto 5
	inheritance_qualifiers  goto 6
	type_modifier_list  goto 7
	def  goto 8
	inheritance  goto 9


state 3
	def : type . optional_star F_IDENTIFIER $$2 '(' argument ')' $$3 function_body  (14)
	def : type . name_list ';'  (15)
	inheritance_qualifier : type . optional_star F_IDENTIFIER  (34)
	optional_star : .  (7)

	'*'  shift 10
	F_IDENTIFIER  reduce 7

	optional_star  goto 11
	name_list  goto 12
	new_name  goto 13


state 4
	inheritance_modifier_list : inheritance_modifier_list . inheritance_modifier type_modifier_list  (33)
	inheritance_qualifiers : inheritance_modifier_list .  (35)

	F_VIRTUAL  shift 14
	F_INHERIT  reduce 35

	inheritance_modifier  goto 15


state 5
	inheritance_qualifiers : inheritance_qualifier . inheritance_qualifiers  (36)
	type_modifier_list : .  (30)

	.  reduce 30

	type  goto 16
	inheritance_modifier_list  goto 4
	inheritance_qualifier  goto 5
	inheritance_qualifiers  goto 17
	type_modifier_list  goto 7


state 6
	inheritance : inheritance_qualifiers . F_INHERIT string_constant ';'  (6)

	F_INHERIT  shift 18
	.  error


state 7
	type_modifier_list : type_modifier_list . type_modifier  (31)
	inheritance_modifier_list : type_modifier_list .  (32)
	type : type_modifier_list . opt_basic_type  (37)
	opt_basic_type : .  (41)

	F_INT  shift 19
	F_STATUS  shift 20
	F_STRING_DECL  shift 21
	F_FLOAT_DECL  shift 22
	F_OBJECT  shift 23
	F_CLOSURE_DECL  shift 24
	F_SYMBOL_DECL  shift 25
	F_VOID  shift 26
	F_MIXED  shift 27
	F_STATIC  shift 28
	F_PRIVATE  shift 29
	F_NO_MASK  shift 30
	F_PROTECTED  shift 31
	F_PUBLIC  shift 32
	F_VARARGS  shift 33
	F_MAPPING  shift 34
	F_VIRTUAL  reduce 32
	F_INHERIT  reduce 32
	F_IDENTIFIER  reduce 41
	'*'  reduce 41

	basic_type  goto 35
	type_modifier  goto 36
	opt_basic_type  goto 37


state 8
	program : program def . possible_semi_colon  (2)
	possible_semi_colon : .  (4)

	';'  shift 38
	$end  reduce 4
	F_INT  reduce 4
	F_STATUS  reduce 4
	F_STRING_DECL  reduce 4
	F_FLOAT_DECL  reduce 4
	F_OBJECT  reduce 4
	F_CLOSURE_DECL  reduce 4
	F_SYMBOL_DECL  reduce 4
	F_VOID  reduce 4
	F_MIXED  reduce 4
	F_STATIC  reduce 4
	F_PRIVATE  reduce 4
	F_NO_MASK  reduce 4
	F_PROTECTED  reduce 4
	F_PUBLIC  reduce 4
	F_VARARGS  reduce 4
	F_VIRTUAL  reduce 4
	F_INHERIT  reduce 4
	F_IDENTIFIER  reduce 4
	F_MAPPING  reduce 4
	'*'  reduce 4

	possible_semi_colon  goto 39


state 9
	def : inheritance .  (16)

	.  reduce 16


state 10
	optional_star : '*' .  (8)

	.  reduce 8


state 11
	def : type optional_star . F_IDENTIFIER $$2 '(' argument ')' $$3 function_body  (14)
	inheritance_qualifier : type optional_star . F_IDENTIFIER  (34)
	new_name : optional_star . F_IDENTIFIER  (54)
	new_name : optional_star . F_IDENTIFIER $$4 F_ASSIGN expr0  (56)

	F_IDENTIFIER  shift 40
	.  error


state 12
	def : type name_list . ';'  (15)
	name_list : name_list . ',' new_name  (53)

	';'  shift 41
	','  shift 42
	.  error


state 13
	name_list : new_name .  (52)

	.  reduce 52


state 14
	inheritance_modifier : F_VIRTUAL .  (29)

	.  reduce 29


state 15
	inheritance_modifier_list : inheritance_modifier_list inheritance_modifier . type_modifier_list  (33)
	type_modifier_list : .  (30)

	.  reduce 30

	type_modifier_list  goto 43


state 16
	inheritance_qualifier : type . optional_star F_IDENTIFIER  (34)
	optional_star : .  (7)

	'*'  shift 10
	F_IDENTIFIER  reduce 7

	optional_star  goto 44


state 17
	inheritance_qualifiers : inheritance_qualifier inheritance_qualifiers .  (36)

	.  reduce 36


state 18
	inheritance : inheritance_qualifiers F_INHERIT . string_constant ';'  (6)

	F_STRING  shift 45
	'('  shift 46
	.  error

	string_constant  goto 47


state 19
	basic_type : F_INT .  (43)

	.  reduce 43


state 20
	basic_type : F_STATUS .  (42)

	.  reduce 42


state 21
	basic_type : F_STRING_DECL .  (44)

	.  reduce 44


state 22
	basic_type : F_FLOAT_DECL .  (48)

	.  reduce 48


state 23
	basic_type : F_OBJECT .  (45)

	.  reduce 45


state 24
	basic_type : F_CLOSURE_DECL .  (46)

	.  reduce 46


state 25
	basic_type : F_SYMBOL_DECL .  (47)

	.  reduce 47


state 26
	basic_type : F_VOID .  (50)

	.  reduce 50


state 27
	basic_type : F_MIXED .  (51)

	.  reduce 51


state 28
	type_modifier : F_STATIC .  (24)

	.  reduce 24


state 29
	type_modifier : F_PRIVATE .  (25)

	.  reduce 25


state 30
	type_modifier : F_NO_MASK .  (23)

	.  reduce 23


state 31
	type_modifier : F_PROTECTED .  (28)

	.  reduce 28


state 32
	type_modifier : F_PUBLIC .  (26)

	.  reduce 26


state 33
	type_modifier : F_VARARGS .  (27)

	.  reduce 27


state 34
	basic_type : F_MAPPING .  (49)

	.  reduce 49


state 35
	opt_basic_type : basic_type .  (40)

	.  reduce 40


state 36
	type_modifier_list : type_modifier_list type_modifier .  (31)

	.  reduce 31


state 37
	type : type_modifier_list opt_basic_type .  (37)

	.  reduce 37


state 38
	possible_semi_colon : ';' .  (5)

	.  reduce 5


state 39
	program : program def possible_semi_colon .  (2)

	.  reduce 2


state 40
	def : type optional_star F_IDENTIFIER . $$2 '(' argument ')' $$3 function_body  (14)
	inheritance_qualifier : type optional_star F_IDENTIFIER .  (34)
	new_name : optional_star F_IDENTIFIER .  (54)
	new_name : optional_star F_IDENTIFIER . $$4 F_ASSIGN expr0  (56)
	$$2 : .  (12)
	$$4 : .  (55)

	F_INT  reduce 34
	F_STATUS  reduce 34
	F_STRING_DECL  reduce 34
	F_FLOAT_DECL  reduce 34
	F_OBJECT  reduce 34
	F_CLOSURE_DECL  reduce 34
	F_SYMBOL_DECL  reduce 34
	F_VOID  reduce 34
	F_MIXED  reduce 34
	F_STATIC  reduce 34
	F_PRIVATE  reduce 34
	F_NO_MASK  reduce 34
	F_PROTECTED  reduce 34
	F_PUBLIC  reduce 34
	F_VARARGS  reduce 34
	F_VIRTUAL  reduce 34
	F_INHERIT  reduce 34
	F_IDENTIFIER  reduce 34
	F_MAPPING  reduce 34
	F_ASSIGN  reduce 55
	'*'  reduce 34
	';'  reduce 54
	'('  reduce 12
	','  reduce 54

	$$2  goto 48
	$$4  goto 49


state 41
	def : type name_list ';' .  (15)

	.  reduce 15


state 42
	name_list : name_list ',' . new_name  (53)
	optional_star : .  (7)

	'*'  shift 10
	F_IDENTIFIER  reduce 7

	optional_star  goto 50
	new_name  goto 51


state 43
	type_modifier_list : type_modifier_list . type_modifier  (31)
	inheritance_modifier_list : inheritance_modifier_list inheritance_modifier type_modifier_list .  (33)

	F_STATIC  shift 28
	F_PRIVATE  shift 29
	F_NO_MASK  shift 30
	F_PROTECTED  shift 31
	F_PUBLIC  shift 32
	F_VARARGS  shift 33
	F_VIRTUAL  reduce 33
	F_INHERIT  reduce 33

	type_modifier  goto 36


state 44
	inheritance_qualifier : type optional_star . F_IDENTIFIER  (34)

	F_IDENTIFIER  shift 52
	.  error


state 45
	string_constant : F_STRING .  (240)
	string_constant : F_STRING . F_STRING  (242)

	F_STRING  shift 53
	F_RANGE  reduce 240
	'+'  reduce 240
	';'  reduce 240
	')'  reduce 240
	':'  reduce 240


state 46
	string_constant : '(' . string_constant ')'  (244)

	F_STRING  shift 45
	'('  shift 46
	.  error

	string_constant  goto 54


state 47
	inheritance : inheritance_qualifiers F_INHERIT string_constant . ';'  (6)
	string_constant : string_constant . '+' F_STRING  (241)
	string_constant : string_constant . '+' F_STRING F_STRING  (243)

	'+'  shift 55
	';'  shift 56
	.  error


state 48
	def : type optional_star F_IDENTIFIER $$2 . '(' argument ')' $$3 function_body  (14)

	'('  shift 57
	.  error


state 49
	new_name : optional_star F_IDENTIFIER $$4 . F_ASSIGN expr0  (56)

	F_ASSIGN  shift 58
	.  error


state 50
	new_name : optional_star . F_IDENTIFIER  (54)
	new_name : optional_star . F_IDENTIFIER $$4 F_ASSIGN expr0  (56)

	F_IDENTIFIER  shift 59
	.  error


state 51
	name_list : name_list ',' new_name .  (53)

	.  reduce 53


state 52
	inheritance_qualifier : type optional_star F_IDENTIFIER .  (34)

	.  reduce 34


state 53
	string_constant : F_STRING F_STRING .  (242)

	.  reduce 242


state 54
	string_constant : string_constant . '+' F_STRING  (241)
	string_constant : string_constant . '+' F_STRING F_STRING  (243)
	string_constant : '(' string_constant . ')'  (244)

	'+'  shift 55
	')'  shift 60
	.  error


state 55
	string_constant : string_constant '+' . F_STRING  (241)
	string_constant : string_constant '+' . F_STRING F_STRING  (243)

	F_STRING  shift 61
	.  error


state 56
	inheritance : inheritance_qualifiers F_INHERIT string_constant ';' .  (6)

	.  reduce 6


state 57
	def : type optional_star F_IDENTIFIER $$2 '(' . argument ')' $$3 function_body  (14)
	argument : .  (19)
	type_modifier_list : .  (30)

	F_INT  reduce 30
	F_STATUS  reduce 30
	F_STRING_DECL  reduce 30
	F_FLOAT_DECL  reduce 30
	F_OBJECT  reduce 30
	F_CLOSURE_DECL  reduce 30
	F_SYMBOL_DECL  reduce 30
	F_VOID  reduce 30
	F_MIXED  reduce 30
	F_STATIC  reduce 30
	F_PRIVATE  reduce 30
	F_NO_MASK  reduce 30
	F_PROTECTED  reduce 30
	F_PUBLIC  reduce 30
	F_VARARGS  reduce 30
	F_IDENTIFIER  reduce 30
	F_MAPPING  reduce 30
	F_LOCAL  reduce 30
	'*'  reduce 30
	')'  reduce 19

	argument  goto 62
	type  goto 63
	type_modifier_list  goto 64
	argument_list  goto 65
	new_arg_name  goto 66


state 58
	new_name : optional_star F_IDENTIFIER $$4 F_ASSIGN . expr0  (56)

	error  shift 67
	F_COLON_COLON  shift 68
	F_QUOTED_AGGREGATE  shift 69
	F_IDENTIFIER  shift 70
	F_STRING  shift 71
	F_NUMBER  shift 72
	F_FLOAT  shift 73
	F_CLOSURE  shift 74
	F_SYMBOL  shift 75
	F_INC  shift 76
	F_DEC  shift 77
	F_SSCANF  shift 78
	F_LOCAL  shift 79
	F_CATCH  shift 80
	F_NOT  shift 81
	'&'  shift 82
	'-'  shift 83
	'~'  shift 84
	'('  shift 85
	.  error

	pre_inc_dec  goto 86
	function_name  goto 87
	anchestor  goto 88
	decl_cast  goto 89
	cast  goto 90
	lvalue  goto 91
	function_call  goto 92
	expr4  goto 93
	catch  goto 94
	sscanf  goto 95
	expr0  goto 96


state 59
	new_name : optional_star F_IDENTIFIER .  (54)
	new_name : optional_star F_IDENTIFIER . $$4 F_ASSIGN expr0  (56)
	$$4 : .  (55)

	F_ASSIGN  reduce 55
	';'  reduce 54
	','  reduce 54

	$$4  goto 49


state 60
	string_constant : '(' string_constant ')' .  (244)

	.  reduce 244


state 61
	string_constant : string_constant '+' F_STRING .  (241)
	string_constant : string_constant '+' F_STRING . F_STRING  (243)

	F_STRING  shift 97
	F_RANGE  reduce 241
	'+'  reduce 241
	';'  reduce 241
	')'  reduce 241
	':'  reduce 241


state 62
	def : type optional_star F_IDENTIFIER $$2 '(' argument . ')' $$3 function_body  (14)

	')'  shift 98
	.  error


state 63
	new_arg_name : type . optional_star F_IDENTIFIER  (17)
	new_arg_name : type . optional_star F_LOCAL  (18)
	optional_star : .  (7)

	'*'  shift 10
	F_IDENTIFIER  reduce 7
	F_LOCAL  reduce 7

	optional_star  goto 99


state 64
	type_modifier_list : type_modifier_list . type_modifier  (31)
	type : type_modifier_list . opt_basic_type  (37)
	opt_basic_type : .  (41)

	F_INT  shift 19
	F_STATUS  shift 20
	F_STRING_DECL  shift 21
	F_FLOAT_DECL  shift 22
	F_OBJECT  shift 23
	F_CLOSURE_DECL  shift 24
	F_SYMBOL_DECL  shift 25
	F_VOID  shift 26
	F_MIXED  shift 27
	F_STATIC  shift 28
	F_PRIVATE  shift 29
	F_NO_MASK  shift 30
	F_PROTECTED  shift 31
	F_PUBLIC  shift 32
	F_VARARGS  shift 33
	F_MAPPING  shift 34
	F_IDENTIFIER  reduce 41
	F_LOCAL  reduce 41
	'*'  reduce 41

	basic_type  goto 35
	type_modifier  goto 36
	opt_basic_type  goto 37


state 65
	argument : argument_list .  (20)
	argument_list : argument_list . ',' new_arg_name  (22)

	','  shift 100
	')'  reduce 20


state 66
	argument_list : new_arg_name .  (21)

	.  reduce 21


state 67
	expr0 : error . F_ASSIGN expr0  (124)

	F_ASSIGN  shift 101
	.  error


state 68
	function_name : F_COLON_COLON . F_IDENTIFIER  (253)

	F_IDENTIFIER  shift 102
	.  error


state 69
	expr4 : F_QUOTED_AGGREGATE . note_start expr_list '}' ')'  (172)
	note_start : .  (161)

	.  reduce 161

	note_start  goto 103


state 70
	expr4 : F_IDENTIFIER .  (189)
	lvalue : F_IDENTIFIER .  (229)
	anchestor : F_IDENTIFIER .  (249)
	function_name : F_IDENTIFIER .  (252)

	F_COLON_COLON  reduce 249
	F_ARROW  reduce 189
	F_INC  reduce 229
	F_DEC  reduce 229
	F_LAND  reduce 189
	F_LOR  reduce 189
	F_ASSIGN  reduce 229
	F_EQ  reduce 189
	F_GE  reduce 189
	F_LE  reduce 189
	F_NE  reduce 189
	F_LSH  reduce 189
	F_RSH  reduce 189
	F_RANGE  reduce 189
	'?'  reduce 189
	'|'  reduce 189
	'^'  reduce 189
	'&'  reduce 189
	'<'  reduce 189
	'>'  reduce 189
	'+'  reduce 189
	'-'  reduce 189
	'*'  reduce 189
	'/'  reduce 189
	'%'  reduce 189
	'['  reduce 189
	';'  reduce 189
	'('  reduce 252
	')'  reduce 189
	','  reduce 189
	'}'  reduce 189
	':'  reduce 189
	']'  reduce 189


state 71
	expr4 : F_STRING .  (163)
	anchestor : F_STRING . F_STRING  (250)
	anchestor : F_STRING .  (251)

	F_STRING  shift 104
	F_COLON_COLON  reduce 251
	F_ARROW  reduce 163
	F_LAND  reduce 163
	F_LOR  reduce 163
	F_EQ  reduce 163
	F_GE  reduce 163
	F_LE  reduce 163
	F_NE  reduce 163
	F_LSH  reduce 163
	F_RSH  reduce 163
	F_RANGE  reduce 163
	'?'  reduce 163
	'|'  reduce 163
	'^'  reduce 163
	'&'  reduce 163
	'<'  reduce 163
	'>'  reduce 163
	'+'  reduce 163
	'-'  reduce 163
	'*'  reduce 163
	'/'  reduce 163
	'%'  reduce 163
	'['  reduce 163
	';'  reduce 163
	')'  reduce 163
	','  reduce 163
	'}'  reduce 163
	':'  reduce 163
	']'  reduce 163


state 72
	expr4 : F_NUMBER .  (164)

	.  reduce 164


state 73
	expr4 : F_FLOAT .  (167)

	.  reduce 167


state 74
	expr4 : F_CLOSURE .  (165)

	.  reduce 165


state 75
	expr4 : F_SYMBOL .  (166)

	.  reduce 166


state 76
	pre_inc_dec : F_INC .  (194)

	.  reduce 194


state 77
	pre_inc_dec : F_DEC .  (195)

	.  reduce 195


state 78
	sscanf : F_SSCANF . note_start '(' expr0 ',' expr0 lvalue_list ')'  (217)
	note_start : .  (161)

	.  reduce 161

	note_start  goto 105


state 79
	expr4 : F_LOCAL .  (190)
	lvalue : F_LOCAL .  (230)

	F_ARROW  reduce 190
	F_INC  reduce 230
	F_DEC  reduce 230
	F_LAND  reduce 190
	F_LOR  reduce 190
	F_ASSIGN  reduce 230
	F_EQ  reduce 190
	F_GE  reduce 190
	F_LE  reduce 190
	F_NE  reduce 190
	F_LSH  reduce 190
	F_RSH  reduce 190
	F_RANGE  reduce 190
	'?'  reduce 190
	'|'  reduce 190
	'^'  reduce 190
	'&'  reduce 190
	'<'  reduce 190
	'>'  reduce 190
	'+'  reduce 190
	'-'  reduce 190
	'*'  reduce 190
	'/'  reduce 190
	'%'  reduce 190
	'['  reduce 190
	';'  reduce 190
	')'  reduce 190
	','  reduce 190
	'}'  reduce 190
	':'  reduce 190
	']'  reduce 190


state 80
	catch : F_CATCH . $$20 '(' comma_expr ')'  (216)
	$$20 : .  (215)

	.  reduce 215

	$$20  goto 106


state 81
	expr0 : F_NOT . expr0  (155)

	error  shift 67
	F_COLON_COLON  shift 68
	F_QUOTED_AGGREGATE  shift 69
	F_IDENTIFIER  shift 70
	F_STRING  shift 71
	F_NUMBER  shift 72
	F_FLOAT  shift 73
	F_CLOSURE  shift 74
	F_SYMBOL  shift 75
	F_INC  shift 76
	F_DEC  shift 77
	F_SSCANF  shift 78
	F_LOCAL  shift 79
	F_CATCH  shift 80
	F_NOT  shift 81
	'&'  shift 82
	'-'  shift 83
	'~'  shift 84
	'('  shift 85
	.  error

	pre_inc_dec  goto 86
	function_name  goto 87
	anchestor  goto 88
	decl_cast  goto 89
	cast  goto 90
	lvalue  goto 91
	function_call  goto 92
	expr4  goto 93
	catch  goto 94
	sscanf  goto 95
	expr0  goto 107

